<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarelo_claro"
    android:orientation="vertical"
    tools:context=".CadastroServicoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="35dp">

            <ImageButton
                android:id="@+id/imBtVoltarDaTelaCadastroServico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/amarelo_claro"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/tvCadastroServico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cadastro_servico"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spCategoriasTelaCadastroServico"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/spinner_personalizada"
                android:backgroundTint="@color/black"
                android:backgroundTintMode="src_over"
                android:popupBackground="@color/black"
                android:tooltipText="@string/categoria" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescricaoTelaCadastroServico"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descricao"
                android:textColorHint="@color/amarelo_claro"
                app:counterEnabled="true"
                app:counterMaxLength="150">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edit_text_personalizada"
                    android:maxLength="150"
                    android:textColor="@color/amarelo_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLogradouroTelaCadastroServico"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/logradouro"
                android:textColorHint="@color/amarelo_claro">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_personalizada"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:textColor="@color/amarelo_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNumeroTelaCadastroServico"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:textColorHint="@color/amarelo_claro">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edit_text_personalizada"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/amarelo_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBairroTelaCadastroServico"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bairro"
                android:textColorHint="@color/amarelo_claro">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edit_text_personalizada"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:textColor="@color/amarelo_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCidadeTelaCadastroServico"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cidade"
                android:textColorHint="@color/amarelo_claro">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edit_text_personalizada"
                    android:maxLength="35"
                    android:maxLines="1"
                    android:textColor="@color/amarelo_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEstadoTelaCadastroServico"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estado"
                android:textColorHint="@color/amarelo_claro">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edit_text_personalizada"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:textColor="@color/amarelo_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPaisTelaCadastroServico"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pais"
                android:textColorHint="@color/amarelo_claro">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edit_text_personalizada"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColor="@color/amarelo_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btCadastrarTelaCadastroServico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/black"
                android:text="@string/cadastrar"
                android:textColor="@color/amarelo_claro" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>