<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarelo_claro"
    android:orientation="vertical"
    tools:context=".CadastroUsuarioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="35dp">

            <ImageButton
                android:id="@+id/imBtVoltarDaTelaCadastroUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/amarelo_claro"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/tvCadastroUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cadastro_usuario"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNomeTelaCadastroUsuario"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:textColorHint="@color/amarelo_claro"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:startIconTint="@color/amarelo_claro">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edit_text_personalizada"
                    android:maxLength="60"
                    android:maxLines="1"
                    android:textColor="@color/amarelo_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailTelaCadastroUsuario"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/amarelo_claro"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconTint="@color/amarelo_claro">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/edit_text_personalizada"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:textColor="@color/amarelo_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTelefoneTelaCadastroUsuario"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone"
                android:textColorHint="@color/amarelo_claro"
                app:startIconDrawable="@drawable/ic_baseline_phone_24"
                app:startIconTint="@color/amarelo_claro">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/edit_text_personalizada"
                    android:inputType="number|phone"
                    android:maxLength="14"
                    android:maxLines="1"
                    android:textColor="@color/amarelo_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSenhaTelaCadastroUsuario"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:textColorHint="@color/amarelo_claro"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/amarelo_claro">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/edit_text_personalizada"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textColor="@color/amarelo_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmarSenhaTelaCadastroUsuario"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmar_senha"
                android:textColorHint="@color/amarelo_claro"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/amarelo_claro">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/edit_text_personalizada"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textColor="@color/amarelo_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btCadastrarTelaCadastroUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/black"
                android:text="@string/cadastrar"
                android:textColor="@color/amarelo_claro" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>